<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:id="@+id/rootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_all_gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/LlNoNetwork"
            android:paddingTop="6dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tvNoNetwork"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/no_network"
                android:background="@drawable/background_nonetwork"
                android:textColor="@color/textColorFooterBold"
                android:textSize="15sp"
                android:fontFamily="@font/latobold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingLeft="40dp"
            android:paddingRight="40dp">

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:text="@string/login"
                android:textColor="@color/cardview_light_background"
                android:textSize="45sp"
                android:textStyle="bold"
                android:fontFamily="@font/latoregular"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_dsc"
                android:fontFamily="@font/latoregular"
                android:textColor="#ffb1bb"
                android:textSize="15sp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rounded_edittext"
                    android:fontFamily="@font/latoregular"
                    android:hint="Username"
                    android:padding="10dp"
                    android:textColor="@color/cardview_light_background"
                    android:textColorHint="@color/textHint"
                    android:textSize="18sp" />

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/cardview_light_background"
                    app:hintEnabled="false"
                    app:passwordToggleDrawable="@drawable/icon_password_selector">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:padding="10dp"
                        android:fontFamily="@font/latoregular"
                        android:ems="10"
                        android:textColor="@color/cardview_light_background"
                        android:textColorHint="@color/textHint"
                        android:textSize="18sp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/rounded_edittext"/>

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:background="@drawable/btn_login"
                    android:textColor="#fbe5ec"
                    android:fontFamily="@font/latoregular"
                    android:text="@string/masuk"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bantuan"
                    android:textSize="@dimen/footer_text"
                    android:fontFamily="@font/latoregular"
                    android:textColor="#e4788d" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bantuan_tap"
                    android:fontFamily="@font/latoregular"
                    android:textSize="@dimen/footer_text"
                    android:textColor="#f9bfcc"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>