<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_main"
            android:orientation="vertical"
            android:paddingBottom="80dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2">

                <ImageView
                    android:contentDescription="logo"
                    android:layout_weight="0.6"
                    android:layout_width="0dp"
                    android:layout_height="60sp"
                    android:src="@drawable/logopdi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_weight="1.3"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_tps"
                    android:fontFamily="@font/latoregular"
                    android:textColor="#ffb1bb"
                    android:textSize="15sp"/>

                <TextView
                    android:id="@+id/no_tps_top"
                    android:layout_width="wrap_content"
                    android:layout_weight="0.1"
                    android:gravity="right"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latobold"
                    android:textColor="#ffb1bb"
                    android:textSize="18sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="25dp"
                    android:fontFamily="@font/latobold"
                    android:text="@string/title_inputc2"
                    android:textColor="@color/cardview_light_background"
                    android:textSize="35sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latoregular"
                    android:text="@string/nama_saksi"
                    android:textColor="#ffb1bb"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/nama_saksi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latobold"
                    android:textColor="#ffb1bb"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/bc_informasi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latoregular"
                        android:layout_marginTop="25dp"
                        android:text="@string/informasi_breadcrumb"
                        android:textColor="@color/breadcrumb_mati"
                        android:textSize="@dimen/breadcrumb_text" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latoregular"
                        android:layout_marginTop="25dp"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:text="@string/panah"
                        android:textColor="@color/breadcrumb_mati"
                        android:textSize="@dimen/breadcrumb_text" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latobold"
                        android:layout_marginTop="25dp"
                        android:text="@string/inputc2_breadcrumb"
                        android:textColor="#ffb1bb"
                        android:textSize="@dimen/breadcrumb_text" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="-60dp"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <LinearLayout
                android:id="@+id/form_input1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/shadow_selector"
                android:elevation="2dp"
                android:orientation="vertical"
                android:paddingBottom="10dp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:paddingTop="10dp">

                <LinearLayout
                    android:id="@+id/layout_tps"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="8dp"
                    android:paddingTop="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/latoregular"
                        android:text="@string/label_gugat"
                        android:textColor="#a70033"
                        android:layout_marginBottom="10dp"
                        android:textSize="@dimen/main_text" />

                    <EditText
                        android:id="@+id/ipt_gugatan"
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@drawable/rounded_edittext2"
                        android:fontFamily="@font/latoregular"
                        android:padding="5dp"
                        android:textColor="@color/cardview_dark_background"
                        android:inputType="textMultiLine"
                        android:textSize="18sp" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:paddingBottom="20dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:textAllCaps="false"
                android:textSize="@dimen/btn_text"
                android:layout_marginBottom="20dp"
                android:textStyle="bold"
                android:background="@drawable/btn_main"
                android:textColor="#fbe5ec"
                android:fontFamily="@font/latoregular"
                android:text="@string/btn_inputdatac2"/>

            <Button
                android:id="@+id/btnKembaliInformasi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/btn_main2"
                android:fontFamily="@font/latoregular"
                android:padding="5dp"
                android:text="@string/btn_kembali_informasi"
                android:textAllCaps="false"
                android:textColor="#bf3037"
                android:textSize="15sp"
                android:textStyle="normal"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bantuan"
                    android:fontFamily="@font/latoregular"
                    android:textSize="@dimen/footer_text"
                    android:textColor="@color/textColorFooter" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bantuan_tap"
                    android:fontFamily="@font/latoregular"
                    android:textSize="@dimen/footer_text"
                    android:textColor="@color/textColorFooterBold"
                    android:layout_marginLeft="3dp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:orientation="vertical">-->
                <!--<Button-->
                    <!--android:id="@+id/btnLogout"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="logout"-->
                    <!--android:layout_alignParentBottom="true"/>-->
            <!--</LinearLayout>-->

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp"
            android:paddingTop="20dp"
            android:background="@drawable/topline_footer"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#8e8e8e"
                android:textSize="@dimen/footer_text"
                android:lineSpacingMultiplier="1.3"
                android:gravity="center"
                android:text="@string/copyright"
                />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
